--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,css,json,md}": [
+        "*.{js,css,json,md,svelte}": [
             "prettier --write",
             "git add"
         ]
