--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.0.1",
     "scripts": {
         "dev": "sapper dev",
-        "build": "sapper build --legacy",
+        "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
+        "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
+        "build": "npm run build:tailwind && sapper build --legacy",
         "export": "sapper export --legacy",
         "start": "node __sapper__/build",
         "cy:run": "cypress run",
@@ -22,10 +24,12 @@
         "@babel/plugin-transform-runtime": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
         "@babel/runtime": "^7.0.0",
+        "@fullhuman/postcss-purgecss": "^1.3.0",
         "@rollup/plugin-replace": "^2.2.0",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
         "npm-run-all": "^4.1.5",
+        "postcss-cli": "^6.1.3",
         "prettier": "^1.19.1",
         "rollup": "^1.12.0",
         "rollup-plugin-babel": "^4.0.2",
@@ -34,7 +38,8 @@
         "rollup-plugin-svelte": "^5.0.1",
         "rollup-plugin-terser": "^4.0.4",
         "sapper": "^0.27.0",
-        "svelte": "^3.0.0"
+        "svelte": "^3.0.0",
+        "tailwindcss": "^1.1.4"
     },
     "husky": {
         "hooks": {
