--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dependencies": {
         "compression": "^1.7.1",
         "polka": "next",
-        "sirv": "^0.4.0"
+        "prettier-plugin-svelte": "^0.7.0",
+        "sirv": "^0.4.0",
+        "tailwindcss-transitions": "^2.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
