--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "compression": "^1.7.1",
+        "mapbox-gl": "^1.6.1",
         "polka": "next",
         "prettier-plugin-svelte": "^0.7.0",
         "sirv": "^0.4.0",
