--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
         "deploy": "./scripts/deploy.sh"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "compression": "^1.7.1",
+        "dotenv": "^8.2.0",
         "mapbox-gl": "^1.6.1",
-        "polka": "next",
+        "nodemailer": "^6.4.2",
+        "polka": "^0.5.2",
         "prettier-plugin-svelte": "^0.7.0",
         "sirv": "^0.4.0",
         "tailwindcss-transitions": "^2.1.0"
