--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cy:run": "cypress run",
         "cy:open": "cypress open",
         "test": "run-p --race dev cy:run",
-        "deploy": "./scripts/deploy.sh"
+        "deploy": "./scripts/deploy.sh",
+        "copyEnv": "./scripts/copEnvh.sh"
     },
     "dependencies": {
         "axios": "^0.19.1",
