Fixed build error and padding bug

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "dev": "sapper dev",
         "watch:tailwind": "postcss static/tailwind.css -o static/index.css -w",
         "build:tailwind": "NODE_ENV=production postcss static/tailwind.css -o static/index.css",
-        "build": "npm run build:tailwind && sapper build --legacy",
-        "export": "sapper export --legacy",
+        "build": "npm run build:tailwind && sapper build",
+        "export": "sapper export",
         "start": "node __sapper__/build",
         "cy:run": "cypress run",
         "cy:open": "cypress open",
