--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "copyEnv": "./scripts/copyEnv.sh"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-pro": "^5.13.0",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
+        "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "axios": "^0.19.1",
         "body-parser": "^1.19.0",
         "compression": "^1.7.1",
@@ -36,6 +40,7 @@
         "@babel/runtime": "^7.0.0",
         "@fullhuman/postcss-purgecss": "^1.3.0",
         "@rollup/plugin-replace": "^2.2.0",
+        "fa-svelte": "^3.1.0",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
         "npm-run-all": "^4.1.5",
