--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "@babel/runtime": "^7.0.0",
         "@fullhuman/postcss-purgecss": "^1.3.0",
         "@rollup/plugin-replace": "^2.2.0",
-        "fa-svelte": "^3.1.0",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
         "npm-run-all": "^4.1.5",
@@ -54,6 +53,7 @@
         "rollup-plugin-terser": "^4.0.4",
         "sapper": "^0.27.0",
         "svelte": "^3.0.0",
+        "svelte-awesome": "^2.3.0",
         "tailwindcss": "^1.1.4"
     },
     "husky": {
