--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
         "compression": "^1.7.1",
         "dotenv": "^8.2.0",
         "dotenv-flow": "^3.1.0",
+        "express": "^4.17.1",
         "mapbox-gl": "^1.6.1",
+        "mongoose": "^5.9.11",
         "nodemailer": "^6.4.2",
-        "polka": "^0.5.2",
         "prettier-plugin-svelte": "^0.7.0",
         "sirv": "^0.4.0",
         "tailwindcss-transitions": "^2.1.0"
@@ -38,6 +39,7 @@
         "@babel/preset-env": "^7.0.0",
         "@babel/runtime": "^7.0.0",
         "@fullhuman/postcss-purgecss": "^1.3.0",
+        "@rollup/plugin-json": "^4.0.3",
         "@rollup/plugin-replace": "^2.2.0",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
