--- a/package.json
+++ b/package.json
@@ -15,46 +15,54 @@
         "deploy": "./scripts/deploy.sh"
     },
     "dependencies": {
-        "@fortawesome/free-brands-svg-icons": "^5.13.0",
-        "@fortawesome/free-regular-svg-icons": "^5.13.0",
-        "@fortawesome/free-solid-svg-icons": "^5.13.0",
-        "axios": "^0.19.1",
+        "@fortawesome/free-brands-svg-icons": "^5.14.0",
+        "@fortawesome/free-regular-svg-icons": "^5.14.0",
+        "@fortawesome/free-solid-svg-icons": "^5.14.0",
+        "axios": "^0.19.2",
         "body-parser": "^1.19.0",
         "compression": "^1.7.1",
         "dotenv": "^8.2.0",
-        "dotenv-flow": "^3.1.0",
+        "dotenv-flow": "^3.2.0",
         "express": "^4.17.1",
-        "mapbox-gl": "^1.6.1",
-        "mongoose": "^5.9.11",
-        "nodemailer": "^6.4.2",
+        "mapbox-gl": "^1.12.0",
+        "mongoose": "^5.10.0",
+        "nodemailer": "^6.4.11",
         "prettier-plugin-svelte": "^0.7.0",
-        "sirv": "^0.4.0",
-        "tailwindcss-transitions": "^2.1.0"
+        "sirv": "^0.4.6",
+        "tailwindcss-transitions": "^2.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.0.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-        "@babel/plugin-transform-runtime": "^7.0.0",
-        "@babel/preset-env": "^7.0.0",
-        "@babel/runtime": "^7.0.0",
+        "@babel/core": "^7.11.4",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.11.0",
+        "@babel/preset-env": "^7.11.0",
+        "@babel/runtime": "^7.11.2",
         "@fullhuman/postcss-purgecss": "^1.3.0",
-        "@rollup/plugin-json": "^4.0.3",
-        "@rollup/plugin-replace": "^2.2.0",
+        "@rollup/plugin-babel": "^5.2.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-replace": "^2.3.3",
+        "@rollup/plugin-typescript": "^5.0.2",
+        "@tsconfig/svelte": "^1.0.10",
+        "@types/express": "^4.17.7",
+        "@types/node": "^14.6.2",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^6.1.3",
         "prettier": "^1.19.1",
-        "rollup": "^1.12.0",
-        "rollup-plugin-babel": "^4.0.2",
+        "rollup": "^2.26.5",
         "rollup-plugin-commonjs": "^10.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-svelte": "^5.0.1",
-        "rollup-plugin-terser": "^4.0.4",
-        "sapper": "^0.27.0",
-        "svelte": "^3.0.0",
+        "rollup-plugin-svelte": "^5.2.3",
+        "rollup-plugin-terser": "^7.0.0",
+        "sapper": "^0.28.0",
+        "svelte": "^3.24.1",
         "svelte-awesome": "^2.3.0",
-        "tailwindcss": "^1.1.4"
+        "svelte-check": "^1.0.22",
+        "svelte-preprocess": "^4.1.1",
+        "tailwindcss": "^1.7.3",
+        "tslib": "^2.0.1",
+        "typescript": "^4.0.2"
     },
     "husky": {
         "hooks": {
@@ -62,7 +70,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,css,json,md,svelte}": [
+        "*.{js,ts,css,json,md,svelte}": [
             "prettier --write",
             "git add"
         ]
