--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@tsconfig/svelte": "^1.0.10",
         "@types/express": "^4.17.7",
         "@types/node": "^14.6.2",
+        "@types/nodemailer": "^6.4.0",
         "husky": "^3.1.0",
         "lint-staged": "^9.5.0",
         "npm-run-all": "^4.1.5",
